# treeDataStructure

./: CMakeLists.txt  README.md  build.sh
.github/workflows/: linux.yml
benchmark/: CMakeLists.txt
benchmark/src/: memory.cpp  memory_footprint.cpp
cmake/: CompilerWarnings.cmake  SourcesAndHeaders.cmake  StandardSettings.cmake  cortex_m4.cmake
experiments/: CMakeLists.txt
experiments/src/: memory_footprint.cpp  permissions.cpp  tree.cpp  writeCallback.cpp
include/: nodes.hpp
include/tree/: nodeFactory.hpp  nodes.hpp  nodes.tpp
src/: CMakeLists.txt  nodes.cpp
test/: CMakeLists.txt
test/src/: create_delete.cpp  get_ids.cpp  nodeFactory.cpp  numleafnodes.cpp  read.cpp  read_write.cpp
